# andrew-loop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  alembic.ini  code-merger.md  code-review.md  coder.md  opencode.json  pyproject.toml  router.md  security-review.md
.opencode/agents/: coder.md
.opencode/plugin/: hidden-helper-semaphore.js
.opencode/prompts/: coder.md  decomposer.md  merger.md  reviewer.md
.opencode/tools/: delegation-record.ts  pr-create.ts  pr-merge.ts  pr-status.ts  pr-update.ts  ticket-comment.ts  ticket-create.ts  ticket-list.ts  ticket-read.ts  ticket-update.ts  validate.ts
docs/: workflow.md
docs/adr/: 0001-router-visible-coder-as-implementation-coordinator.md  0002-logical-agents-with-priority-allocated-coder-backends.md  0003-patch-review-handoff-gate-universal-across-coder-backends.md
docs/prd/: implementation-coordinator-and-hidden-subagents.md  local-coder-optimization.md  priority-allocated-coder-backends.md
migrations/: env.py
migrations/versions/: 001_issue_id_and_ticket_metrics.py  002_backend_state.py  003_backend_lease_concurrency.py  (+1 more)
scripts/: setup-local-hindsight.sh
src/orch/: __init__.py  (+23 more)
tests/: conftest.py  test_agent_config.py  test_cli.py  test_coder_agent.py  test_config.py  test_custom_tools.py  test_dag.py  test_db.py  test_decomposer_agent.py  test_doctor.py  test_e2e.py  test_e2e_smoke.py  test_event_log.py  test_hindsight.py  test_import_promote.py  test_init.py  test_merger_agent.py  test_opencode_tools.py  test_pr.py  test_prompt.py  test_reviewer_agent.py  test_router.py  test_router_v2.py  test_status.py  test_tickets.py  test_webhook.py  test_worktrees.py
(+8 files in other folders)
